Fix: logo sizing and spacing.

--- a/src/stylesheets/construct.scss
+++ b/src/stylesheets/construct.scss
@@ -76,17 +76,17 @@
  */
 .logo {
     font-family: $font-family-sans-serif;
-    font-size: $font-size-xl;
-    font-weight: 800;
+    // font-size: $font-size-xl;
+    // font-weight: 800;
     color: $body-color;
     display: block;
     border-bottom: 0;
-    margin-bottom: $spacing-xxs;
-    line-height: 1.1;
+    // margin-bottom: $spacing-xxs;
+    // line-height: 1.1;
 
-    @include media-breakpoint-up(md) {
-        margin-bottom: $spacing-xs;
-    }
+    // @include media-breakpoint-up(md) {
+    //     margin-bottom: $spacing-xs;
+    // }
 
     &:hover {
         color: $body-color;
@@ -101,8 +101,25 @@
 
     #logo-construct {
         fill: currentColor;
-        width: 180px;
-        height: 25px;
+        width: 104px;
+        height: 19px;
+
+        @include media-breakpoint-up(sm) {
+            width: 120px;
+            height: 23px;
+        }
+
+        @include media-breakpoint-up(md) {
+            width: 155px;
+            height: 30px;
+            margin-top: $spacing-xxs;
+            margin-bottom: $spacing-xxs;
+        }
+
+        @include media-breakpoint-up(lg) {
+            width: 180px;
+            height: 25px;
+        }
     }
 
     .is-transparent & {
